crates/rb-storage-neo4j/tests/fixtures/cypher_attacks/reject/019.cypher
MATCH (n) SET n.leaked = true; RETURN 1
